@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-06-30}
+  s.date = %q{2010-07-12}
   s.description = %q{
 something at the intersection of Rails3, CouchDB and rufus-jig
   }
