@@ -4,6 +4,7 @@
 
 == rufus-doric - 0.1.16    not yet released
 
+- OneDocModel#attach
 - removed duplicates for custom view results. Thanks Claudio.
 - 'open' models
 
